# caduceus-zed

./: .rules  CADUCEUS_UI_AUDIT.md  Cargo.toml  README.md  build-caduceus.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/keymaps/: default-macos.json
assets/settings/: default.json
crates/acp_thread/src/: acp_thread.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  caduceus_native_state.rs  caduceus_provider_adapter.rs  caduceus_tool_adapter.rs  dag_diversity.rs  db.rs  thread.rs  thread_store.rs  tool_permissions.rs  tools.rs
crates/agent_servers/: Cargo.toml
crates/agent_settings/src/: agent_profile.rs  agent_settings.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_diff.rs  agent_panel.rs  agent_ui.rs  conversation_view.rs  language_model_selector.rs  model_selector.rs  profile_selector.rs  runs_panel.rs  thread_metadata_store.rs
crates/ai_onboarding/src/: agent_api_keys_onboarding.rs  agent_panel_onboarding_content.rs
crates/anthropic/src/: anthropic.rs
crates/caduceus_bridge/: Cargo.toml
crates/caduceus_bridge/src/: bridge_error.rs  context_events.rs  crdt.rs  dag_state.rs  engine.rs  event_translator.rs  git.rs  index_dag.rs  lib.rs  marketplace.rs  memory.rs  orchestrator.rs  providers.rs  repo_card.rs  run_ref.rs  runs_panel.rs  runtime.rs  safety.rs  search.rs  security.rs  storage.rs  telemetry.rs  tokio_rt.rs  tools.rs  tree_sitter.rs
crates/caduceus_bridge/tests/: agent_tool_integration.rs  e2e_concurrency.rs  g1b_native_loop_translated.rs  p13_introspection.rs  st8_pr3a_intercept_no_execute.rs  wiki_phase_d_integration.rs
crates/context_server/src/: context_server.rs
crates/edit_prediction_ui/: Cargo.toml
crates/language_model/: Cargo.toml
crates/language_models_cloud/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/zed/: Cargo.toml  build.rs
private/reviews/: review-code-20250616-caduceus.md  review-code-20260416-003000.md  review-code-20260416-004700.md  review-code-20260416-192332.md  review-code-20260419-134511.md  review-code-20260426-115937.md  review-code-dag-panel-final.md  review-code-dag-panel-opus.md  review-code-dag-panel-sonnet.md  review-code-extract-memories.md  review-code-lsp-manager.md  review-code-mcp-opt-in.md  review-code-pause-resume.md  review-code-tool-pair-split.md  review-pr25-ux-20260420-final.md
script/: bundle-mac
scripts/: ci-preflight.sh  install-git-hooks.sh
(+90 files in other folders)
