[package]
name = "caduceus_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
caduceus-core = { workspace = true }
caduceus-tools = { workspace = true }
caduceus-orchestrator = { workspace = true }
caduceus-providers = { workspace = true }
caduceus-omniscience = { workspace = true }
caduceus-git = { workspace = true }
caduceus-telemetry = { workspace = true }
caduceus-storage = { workspace = true }
caduceus-permissions = { workspace = true }
caduceus-crdt = { workspace = true }
caduceus-marketplace = { workspace = true }
caduceus-runtime = { workspace = true }
caduceus-mcp = { workspace = true }
caduceus-eval = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log.workspace = true
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tiktoken-rs.workspace = true

[features]
default = []
local-embeddings = ["caduceus-omniscience/local-embeddings"]

[dev-dependencies]
tempfile = "3"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
